tests/paczka1/small_fuzzy/37233161.err
Error in line 2: ohL S4 94,7
Error in line 1: iDSzdeN A658 80,1
Error in line 9: gmoVF A658 17,2
Error in line 11: ohL S946 63,3
